[tool.poetry]
name = "pydelling"
version = "1.7.15"
description = "Package providing a variety of utility methods for mathematical modelling"
authors = ["Aitor <aitirga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
