[tool.poetry]
name = "pydelling"
version = "1.11.1"
description = "Package providing a variety of utility methods for mathematical modelling"
authors = ["Aitor <aitirga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ofpp = "*"
numpy = "*"
pandas = "*"
h5py = "*"
vtk = "*"
matplotlib = "*"
scipy = "*"
python-box = "*"
pyyaml = "*"
setuptools = "*"
xlrd = "*"
openpyxl = "*"
tqdm = "*"
seaborn = "*"
natsort = "*"
sklearn = "*"
meshio = "*"
plotly = "*"
shapely = "*"
tabulate = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
streamlit = "*"
dill = "*"
trimesh = "*"
mpmath = "*"
paramiko = "*"
rich = "*"
numpy-stl = "*"
docker = "*"
scikit-learn = "*"
alive-progress = "*"
rtree = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
